updated submodules restKit and easyMapping

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 *.xcuserstate
 
 RestKitTest.xcodeproj/project.xcworkspace/xcuserdata/andrewromanov.xcuserdatad/UserInterfaceState.xcuserstate
+
+RestKitTest.xcodeproj/project.xcworkspace/xcshareddata/
